<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">3D Picture Viewer</string>
    <string name="select_picture">Select a Picture</string>
    <string name="square">Square</string>
    <string name="cube">Cube</string>
    <string name="select_shape">Select a Shape:</string>
    <string name="error_image_not_found">Image not Found!</string>
    <string name="error_invalid_shape">Invalid Shape!</string>
    <string name="take_picture">Take a Picture</string>
</resources>
